# JurassicParkTrespasser

./: .gitignore
jp2_pc/: AI.vcxproj  Audio.vcxproj  Audio.vcxproj.filters  Bugs.vcxproj  CMakeLists.txt  CollisionEditor.vcxproj  EntityDBase.vcxproj  File Test.vcxproj  File.vcxproj  GUIApp.vcxproj  Game.vcxproj  Generate-VS2019-x86.cmd  GeomDBase.vcxproj  GroffBuild.vcxproj  GroffBuild.vcxproj.filters  GroffExp.vcxproj  JP2_PC.vcxproj  Loader.vcxproj  Math.vcxproj  MathTest.vcxproj  Physics.vcxproj  PhysicsTest.vcxproj  PipeLineTest.vcxproj  ProcessorDetect.vcxproj  QuantizerTool.vcxproj  Render3D.vcxproj  ScreenRenderDWI.vcxproj  Std.vcxproj  System.vcxproj  System.vcxproj.filters  View.vcxproj  View.vcxproj.filters  WaveTest.vcxproj  WinShell.vcxproj  msbuildanalysis.ps1  sonar-project.properties  trespass.vcxproj
jp2_pc/Source/GUIApp/: GUIApp.cpp  GUIAppDlg.cpp  StdAfx.h
jp2_pc/Source/GUIApp/res/: GUIApp.rc2
jp2_pc/Source/Game/AI/: AIGraph.cpp  Activity.cpp  Activity.hpp  PathAStar.cpp  Port.cpp  WorldView.cpp
jp2_pc/Source/GroffBuild/: main.cpp  maindlg.cpp
jp2_pc/Source/InitGUIApp/: InitGUIAppDlg.cpp  StdAfx.h
jp2_pc/Source/Lib/Audio/: Audio.cpp  Audio.hpp  AudioDaemon.cpp
jp2_pc/Source/Lib/Control/: Control.cpp
jp2_pc/Source/Lib/EntityDBase/: Instance.cpp  MessageTypes.cpp  QueueMessage.cpp  QueueMessage.hpp  RenderDB.cpp  Water.cpp  WorldDBase.cpp
jp2_pc/Source/Lib/GeomDBase/: Mesh.cpp  Mesh.hpp  PartitionSpace.cpp  PartitionSpace.hpp  RayCast.cpp
jp2_pc/Source/Lib/Groff/: FileIO.cpp  Groff.hpp  GroffIO.cpp
jp2_pc/Source/Lib/Loader/: TextureManager.hpp  TexturePackSurface.cpp  TexturePackSurface.hpp
jp2_pc/Source/Lib/Physics/: InfoSkeleton.hpp  Pelvis.cpp  Xob_bc.cpp  foot.cpp
jp2_pc/Source/Lib/Renderer/: DepthSort.cpp  Occlude.cpp  Occlude.hpp  PipeLine.cpp  ScreenRender.cpp  ScreenRender.hpp  ScreenRenderDWI.cpp
jp2_pc/Source/Lib/Renderer/Primitives/: DrawSubTriangle.cpp  FastBump.cpp
jp2_pc/Source/Lib/Std/: Array.hpp  Set.hpp  TreeList.hpp
jp2_pc/Source/Lib/Sys/: VirtualMem.cpp  reg.cpp  reg.h
jp2_pc/Source/Lib/Sys/W95/: Errors.cpp  Render.cpp
jp2_pc/Source/Lib/Transform/: Vector.hpp
jp2_pc/Source/Lib/View/: Clut.hpp  RasterVid.hpp
jp2_pc/Source/Lib/View/W95/: RasterVid.cpp  Video.cpp
jp2_pc/Source/Lib/W95/: DD.cpp  DD.hpp  Direct3DQuery.cpp
jp2_pc/Source/Test/: TestMath.cpp  TestPipeLine.cpp  TestPipeLine.hpp
jp2_pc/Source/Test/Physics/: PhysicsTestShell.cpp
jp2_pc/Source/Tools/CollisionEditor/: CollisionEditor.cpp  CollisionEditorDlg.cpp  Database.cpp  EditMaterialDlg.cpp
jp2_pc/Source/Tools/GroffExp/: Bitmap.cpp  GroffExp.cpp
jp2_pc/Source/Trespass/: Cdib.cpp  ctrls.cpp  ctrls.h  gamewnd.cpp  main.cpp  mainwnd.cpp  saveload.cpp  supportfn.cpp  token.cpp  tpassglobals.cpp  uidlgs.cpp  uiwnd.cpp  video.cpp
jp2_pc/Source/TrespassAdv/: StdAfx.h  TrespassAdvDlg.cpp
jp2_pc/Source/TweakNVidia128/: StdAfx.h
jp2_pc/cmake/: CMakeCommon.cmake
jp2_pc/cmake/AI/: CMakeLists.txt
jp2_pc/cmake/AITest/: CMakeLists.txt
jp2_pc/cmake/Audio/: CMakeLists.txt
jp2_pc/cmake/Bugs/: CMakeLists.txt
jp2_pc/cmake/CollisionEditor/: CMakeLists.txt
jp2_pc/cmake/EntityDBase/: CMakeLists.txt
jp2_pc/cmake/Examples/: CMakeLists.txt
jp2_pc/cmake/File/: CMakeLists.txt
jp2_pc/cmake/FileTest/: CMakeLists.txt
jp2_pc/cmake/GUIApp/: CMakeLists.txt
jp2_pc/cmake/Game/: CMakeLists.txt
jp2_pc/cmake/GeomDBase/: CMakeLists.txt
jp2_pc/cmake/GroffBuild/: CMakeLists.txt
jp2_pc/cmake/GroffExp/: CMakeLists.txt
jp2_pc/cmake/InitGUIApp/: CMakeLists.txt
jp2_pc/cmake/InitGUIApp2/: CMakeLists.txt
jp2_pc/cmake/LZSS/: CMakeLists.txt
jp2_pc/cmake/Loader/: CMakeLists.txt
jp2_pc/cmake/Math/: CMakeLists.txt
jp2_pc/cmake/MathTest/: CMakeLists.txt
jp2_pc/cmake/Physics/: CMakeLists.txt
jp2_pc/cmake/PhysicsTest/: CMakeLists.txt
jp2_pc/cmake/PipelineTest/: CMakeLists.txt
jp2_pc/cmake/ProcessorDetect/: CMakeLists.txt
jp2_pc/cmake/QuantizerTool/: CMakeLists.txt
jp2_pc/cmake/QuantizerToolCLI/: CMakeLists.txt
jp2_pc/cmake/Render3D/: CMakeLists.txt
jp2_pc/cmake/ScreenRenderDWI/: CMakeLists.txt
jp2_pc/cmake/Std/: CMakeLists.txt
jp2_pc/cmake/System/: CMakeLists.txt
jp2_pc/cmake/TweakNvidia128/: CMakeLists.txt
jp2_pc/cmake/TweakTrespass/: CMakeLists.txt
jp2_pc/cmake/View/: CMakeLists.txt
jp2_pc/cmake/WaveTest/: CMakeLists.txt
jp2_pc/cmake/WinShell/: CMakeLists.txt
jp2_pc/cmake/trespass/: CMakeLists.txt
