cmake_minimum_required(VERSION 3.5)
project(JP2_PC)

set(CMAKE_SUPPRESS_REGENERATION true) #Suppress zero-check project
set(CMake_MSVC_PARALLEL true GLOBAL)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(cmake/AI)
add_subdirectory(cmake/AITest)
add_subdirectory(cmake/Audio)
add_subdirectory(cmake/Bugs)
add_subdirectory(cmake/CollisionEditor)
add_subdirectory(cmake/EntityDBase)
add_subdirectory(cmake/File)
add_subdirectory(cmake/FileTest)
add_subdirectory(cmake/Game)
add_subdirectory(cmake/GeomDBase)
add_subdirectory(cmake/GroffBuild)
add_subdirectory(cmake/GroffExp)
add_subdirectory(cmake/GUIApp)
add_subdirectory(cmake/LZSS)
add_subdirectory(cmake/Loader)
add_subdirectory(cmake/Math)
add_subdirectory(cmake/MathTest)
add_subdirectory(cmake/Physics)
add_subdirectory(cmake/PhysicsTest)
add_subdirectory(cmake/PipelineTest)
add_subdirectory(cmake/ProcessorDetect)
add_subdirectory(cmake/QuantizerTool)
add_subdirectory(cmake/QuantizerToolCLI)
add_subdirectory(cmake/Render3D)
add_subdirectory(cmake/ScreenRenderDWI)
add_subdirectory(cmake/Std)
add_subdirectory(cmake/System)
add_subdirectory(cmake/trespass)
add_subdirectory(cmake/TweakNvidia128)
add_subdirectory(cmake/View)
add_subdirectory(cmake/WaveTest)
add_subdirectory(cmake/WinShell)
